responsive mobile activités

--- a/index.html
+++ b/index.html
@@ -213,52 +213,64 @@
             <div class="activities-section">
                 <a href="pages/activites/vieuxport.html" target="_blank">
                     <div class="activities-box">
-                        <source media="(max-width: 480px)" srcset="images/activites/4_small_mobile/vieux-port-mobile.jpg">
-                        <source media="(min-width: 481px)" srcset="images/activites/4_small/vieux-port.jpg">
-                        <img src="images/activites/4_small/vieux-port.jpg" alt="Image du vieux port de Marseille">
+                        <picture>
+                            <source media="(max-width: 480px)" srcset="images/activites/4_small_mobile/vieux-port-mobile.jpg">
+                            <source media="(min-width: 481px)" srcset="images/activites/4_small/vieux-port.jpg">
+                            <img src="images/activites/4_small/vieux-port.jpg" alt="Image du vieux port de Marseille">
+                        </picture>
                         <h4>Vieux Port</h4>
                     </div>
                 </a>
                 <div class="activities-m">
                     <a href="pages/activites/fortdepomegues.html" target="_blank">
                         <div class="activities-box">
-                            <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/fort-de-pomegues-mobile.jpg">
-                            <source media="(min-width: 481px)" srcset="images/hebergements/4_small/fort-de-pomegues.jpg">
-                            <img src="images/activites/4_small/fort-de-pomegues.jpg" alt="Image du Fort de Pomègues">
+                            <picture>
+                                <source media="(max-width: 480px)" srcset="images/activites/4_small_mobile/fort-de-pomegues-mobile.jpg">
+                                <source media="(min-width: 481px)" srcset="images/activites/4_small/fort-de-pomegues.jpg">
+                                <img src="images/activites/4_small/fort-de-pomegues.jpg" alt="Image du Fort de Pomègues">
+                            </picture>
                             <h4>Fort de Pomègues</h4>
                         </div>
                     </a>
                     <a href="pages/activites/ilesdufrioul.html" target="_blank">
                         <div class="activities-box">
-                            <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/iles-du-frioul-mobile.jpg">
-                            <source media="(min-width: 481px)" srcset="images/hebergements/4_small/iles-du-frioul.jpg">
-                            <img src="images/activites/4_small/iles-du-frioul.jpg" alt="Image des Îles du Frioul">
+                            <picture>
+                                <source media="(max-width: 480px)" srcset="images/activites/4_small_mobile/ile-du-frioul-mobile.jpg">
+                                <source media="(min-width: 481px)" srcset="images/activites/4_small/iles-du-frioul.jpg">
+                                <img src="images/activites/4_small/iles-du-frioul.jpg" alt="Image des Îles du Frioul">
+                            </picture>
                             <h4>Îles du Frioul</h4>
                         </div>
                     </a>
                 </div>
                 <a href="pages/activites/parcnationaldescalanques.html" target="_blank">
                     <div class="activities-box">
-                        <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/parc-national-des-calanques-mobile.jpg">
-                        <source media="(min-width: 481px)" srcset="images/hebergements/4_small/parc-national-des-calanques.jpg">
-                        <img src="images/activites/4_small/parc-national-des-calanques.jpg" alt="Image du Parc National des Calanques">
+                        <picture>
+                            <source media="(max-width: 480px)" srcset="images/activites/4_small_mobile/parc-national-des-calanques-mobile.jpg">
+                            <source media="(min-width: 481px)" srcset="images/activites/4_small/parc-national-des-calanques.jpg">
+                            <img src="images/activites/4_small/parc-national-des-calanques.jpg" alt="Image du Parc National des Calanques">
+                        </picture>
                         <h4>Parc National des Calanques</h4>
                     </div>
                 </a>
                 <div class="activities-m">
                     <a href="pages/activites/notredamedelagarde.html" target="_blank">
                         <div class="activities-box">
-                            <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/notre-dame-de-la-garde-mobile.jpg">
-                            <source media="(min-width: 481px)" srcset="images/hebergements/4_small/notre-dame-de-la-garde.jpg">
-                            <img src="images/activites/4_small/notre-dame-de-la-garde.jpg" alt="Image de Notre-Dame-de-la-Garde">
+                            <picture>
+                                <source media="(max-width: 480px)" srcset="images/activites/4_small_mobile/notre-dame-de-la-garde-mobile.jpg">
+                                <source media="(min-width: 481px)" srcset="images/activites/4_small/notre-dame-de-la-garde.jpg">
+                                <img src="images/activites/4_small/notre-dame-de-la-garde.jpg" alt="Image de Notre-Dame-de-la-Garde">
+                            </picture>
                             <h4>Notre-Dame-de-la-Garde</h4>
                         </div>
                     </a>
                     <a href="pages/activites/parclongchamp.html" target="_blank">
                         <div class="activities-box">
-                            <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/parc-longchamp-mobile.jpg">
-                            <source media="(min-width: 481px)" srcset="images/hebergements/4_small/parc-longchamp.jpg">
-                            <img src="images/activites/4_small/parc-longchamp.jpg" alt="Image du Parc Longchamp">
+                            <picture>
+                                <source media="(max-width: 480px)" srcset="images/activites/4_small_mobile/parc-longchamp-mobile.jpg">
+                                <source media="(min-width: 481px)" srcset="images/activites/4_small/parc-longchamp.jpg">
+                                <img src="images/activites/4_small/parc-longchamp.jpg" alt="Image du Parc Longchamp">
+                            </picture>
                             <h4>Parc Longchamp</h4>
                         </div>
                     </a>
