responsive tablette activités

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         </div>
                     </a>
                     <a href="pages/hebergements/lesmouettes.html" target="_blank">
-                        <div class="lodging-box">
+                        <div class="lodging-box" id="lesmouettes">
                             <picture>
                                 <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/hotel-les-mouettes-mobile.jpg">
                                 <source media="(min-width: 481px)" srcset="images/hebergements/4_small/hotel-les-mouettes.jpg">
@@ -129,7 +129,7 @@
                         </div>
                     </a>
                     <a href="pages/hebergements/hoteldelamer.html" target="_blank">
-                        <div class="lodging-box">
+                        <div class="lodging-box" id="hoteldelamer">
                             <picture>
                                 <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/hotel-de-la-mer-mobile.jpg">
                                 <source media="(min-width: 481px)" srcset="images/hebergements/4_small/hotel-de-la-mer.jpg">
