--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
         <meta name="description" content="site Reservia">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Reservia</title>
-        <link rel="preload" href="Raleway-Thin.woff2" as="font" type="font/woff2" crossorigin>
-        <link rel="preload" href="Raleway-Bold.woff2" as="font" type="font/woff2" crossorigin>
         <link href="css/desktop.css" rel="stylesheet">
         <link href="css/mobile.css" rel="stylesheet">
         <link href="css/tablette.css" rel="stylesheet">
@@ -42,7 +40,7 @@
                 <div class="search-box">
                     <i class="fas fa-map-marker-alt"></i>
                     <input type="search" name="site-search" id="site-search" placeholder="Marseille, France">
-                    <button><i class="fas fa-search"></i>Rechercher</i></button>
+                    <button><i class="fas fa-search"></i>Rechercher</button>
                 </div>
                 </form>
             </div>
