modification des liens css

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta name="description" content="site Reservia">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Reservia</title>
-        <link href="css/desktop.css" rel="stylesheet">
-        <link href="css/mobile.css" rel="stylesheet">
-        <link href="css/tablette.css" rel="stylesheet">
+        <link href="CSS/desktop.css" rel="stylesheet">
+        <link href="CSS/mobile.css" rel="stylesheet">
+        <link href="CSS/tablette.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/f46add157b.js" crossorigin="anonymous"></script>
     </head>
     <body>
