modifs avec border-box

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <nav class="header-nav">
                 <div class="tabs">
                     <ul>
-                        <li id="lodging-tab"><a href="#lodging">Hébergements</a></li>
-                        <li id="activities-tab"><a href="#activities">Activités</a></li>
+                        <li><a href="#lodging">Hébergements</a></li>
+                        <li><a href="#activities">Activités</a></li>
                     </ul>
                 </div>
                 <div class="register">
@@ -45,9 +45,7 @@
                 </form>
             </div>
             <div class="filters">
-                <div class="p-filters">
-                    <p>Filtres</p>
-                </div>
+                <p>Filtres</p>
                 <div class="filters-ctg">
                     <div class="filters-box">
                         <i class="fas fa-money-bill-wave blue"></i>
@@ -84,7 +82,7 @@
             <article class="lodging-section">
                 <h2 id="lodging">Hébergements à Marseille</h2>
                 <div class="m-lodging">
-                    <a href="pages/hebergements/lacannebiere.html" target="_blank">
+                    <a href="#">
                         <div class="lodging-box">
                             <picture>
                                 <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/auberge-la-cannebiere-mobile.jpg">
@@ -98,7 +96,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="pages/hebergements/hotelduport.html" target="_blank">   
+                    <a href="#">   
                         <div class="lodging-box">
                             <picture>
                                 <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/hotel-du-port-mobile.jpg">
@@ -112,7 +110,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="pages/hebergements/lesmouettes.html" target="_blank">
+                    <a href="#">
                         <div class="lodging-box" id="lesmouettes">
                             <picture>
                                 <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/hotel-les-mouettes-mobile.jpg">
@@ -126,7 +124,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="pages/hebergements/hoteldelamer.html" target="_blank">
+                    <a href="#">
                         <div class="lodging-box" id="hoteldelamer">
                             <picture>
                                 <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/hotel-de-la-mer-mobile.jpg">
@@ -140,7 +138,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="pages/hebergements/lepanier.html" target="_blank">
+                    <a href="#">
                         <div class="lodging-box" id="lepanier">
                             <picture>
                                 <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/auberge-le-panier-mobile.jpg">
@@ -154,7 +152,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="pages/hebergements/hotelchezamina.html" target="_blank">
+                    <a href="#">
                         <div class="lodging-box" id="chezamina">
                             <picture>
                                 <source media="(max-width: 480px)" srcset="images/hebergements/4_small_mobile/hotel-chez-amina-mobile.jpg">
@@ -179,28 +177,40 @@
                     <i class="fas fa-chart-line"></i>
                 </div>
                 <div class="m-popular">
-                    <a href="pages/hebergements/lesoleildumatin.html" target="_blank">
+                    <a href="#">
                         <div class="popular-box">
-                            <img src="images/hebergements/4_small/hotel-le-soleil-du-matin.jpg" alt="chambre de l'hôtel le soleil du matin">
-                            <h4>Hôtel Le soleil du matin</h4>
-                            <p>Nuit à partir de <span>128€</span></p>
-                            <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i>
+                            <div class="popular-box-img">
+                                <img src="images/hebergements/4_small/hotel-le-soleil-du-matin.jpg" alt="chambre de l'hôtel le soleil du matin">
+                            </div>
+                            <div class="popular-box-info">
+                                <h4>Hôtel Le soleil du matin</h4>
+                                <p>Nuit à partir de <span>128€</span></p>
+                                <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i>
+                            </div>
                         </div>
                     </a>
-                    <a href="pages/hebergements/aucoeurdeleau.html" target="_blank">
+                    <a href="#">
                         <div class="popular-box">
-                            <img src="images/hebergements/4_small/au-coeur-de-l-eau.jpg" alt="chambre des chambres d'hôtes Au coeur de l'eau">
-                            <h4>Au coeur de l'eau Chambres d'hôtes</h4>
-                            <p>Nuit à partir de <span>71€</span></p>
-                            <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star grey"></i>
+                            <div class="popular-box-img">
+                                <img src="images/hebergements/4_small/au-coeur-de-l-eau.jpg" alt="chambre des chambres d'hôtes Au coeur de l'eau">
+                            </div>
+                            <div class="popular-box-info">
+                                <h4>Au coeur de l'eau Chambres d'hôtes</h4>
+                                <p>Nuit à partir de <span>71€</span></p>
+                                <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star grey"></i>
+                            </div>
                         </div>
                     </a>
-                    <a href="pages/hebergements/toutbleuetblanc.html" target="_blank">
+                    <a href="#">
                         <div class="popular-box">
-                            <img src="images/hebergements/4_small/hotel-tout-bleu-et-blanc.jpg" alt="chambre de l'hôtel Tout bleu et blanc">
-                            <h4>Hôtel Tout bleu et blanc</h4>
-                            <p>Nuit à partir de <span>68€</span></p>
-                            <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star grey"></i>
+                            <div class="popular-box-img">
+                                <img src="images/hebergements/4_small/hotel-tout-bleu-et-blanc.jpg" alt="chambre de l'hôtel Tout bleu et blanc">
+                            </div>
+                            <div class="popular-box-info">
+                                <h4>Hôtel Tout bleu et blanc</h4>
+                                <p>Nuit à partir de <span>68€</span></p>
+                                <i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star blue"></i><i class="fas fa-star grey"></i>
+                            </div>
                         </div>
                     </a>
                 </div>
@@ -209,7 +219,7 @@
         <section>
             <h2 id="activities">Activités à Marseille</h2>
             <div class="activities-section">
-                <a href="pages/activites/vieuxport.html" target="_blank">
+                <a href="#">
                     <div class="activities-box">
                         <picture>
                             <source media="(max-width: 480px)" srcset="images/activites/4_small_mobile/vieux-port-mobile.jpg">
@@ -220,7 +230,7 @@
                     </div>
                 </a>
                 <div class="activities-m">
-                    <a href="pages/activites/fortdepomegues.html" target="_blank">
+                    <a href="#">
                         <div class="activities-box">
                             <picture>
                                 <source media="(max-width: 480px)" srcset="images/activites/4_small_mobile/fort-de-pomegues-mobile.jpg">
@@ -230,7 +240,7 @@
                             <h4>Fort de Pomègues</h4>
                         </div>
                     </a>
-                    <a href="pages/activites/ilesdufrioul.html" target="_blank">
+                    <a href="#">
                         <div class="activities-box">
                             <picture>
                                 <source media="(max-width: 480px)" srcset="images/activites/4_small_mobile/ile-du-frioul-mobile.jpg">
@@ -241,7 +251,7 @@
                         </div>
                     </a>
                 </div>
-                <a href="pages/activites/parcnationaldescalanques.html" target="_blank">
+                <a href="#">
                     <div class="activities-box">
                         <picture>
                             <source media="(max-width: 480px)" srcset="images/activites/4_small_mobile/parc-national-des-calanques-mobile.jpg">
@@ -252,7 +262,7 @@
                     </div>
                 </a>
                 <div class="activities-m">
-                    <a href="pages/activites/notredamedelagarde.html" target="_blank">
+                    <a href="#">
                         <div class="activities-box">
                             <picture>
                                 <source media="(max-width: 480px)" srcset="images/activites/4_small_mobile/notre-dame-de-la-garde-mobile.jpg">
@@ -262,7 +272,7 @@
                             <h4>Notre-Dame-de-la-Garde</h4>
                         </div>
                     </a>
-                    <a href="pages/activites/parclongchamp.html" target="_blank">
+                    <a href="#">
                         <div class="activities-box">
                             <picture>
                                 <source media="(max-width: 480px)" srcset="images/activites/4_small_mobile/parc-longchamp-mobile.jpg">
@@ -303,3 +313,4 @@
             </div>
         </footer>
     </body>
+</html>
