compatibilité des navigateurs

--- a/index.html
+++ b/index.html
@@ -223,7 +223,8 @@
                     <div class="activities-box">
                         <picture>
                             <source media="(max-width: 480px)" srcset="images/activites/4_small_mobile/vieux-port-mobile.jpg">
-                            <source media="(min-width: 481px)" srcset="images/activites/4_small/vieux-port.jpg">
+                            <source media="(min-width: 481px) and (max-width: 980px)" srcset="images/activites/tablette/vieux-port-tablette.jpg">
+                            <source media="(min-width: 981px)" srcset="images/activites/4_small/vieux-port.jpg">
                             <img src="images/activites/4_small/vieux-port.jpg" alt="Image du vieux port de Marseille">
                         </picture>
                         <h4>Vieux Port</h4>
@@ -234,7 +235,8 @@
                         <div class="activities-box">
                             <picture>
                                 <source media="(max-width: 480px)" srcset="images/activites/4_small_mobile/fort-de-pomegues-mobile.jpg">
-                                <source media="(min-width: 481px)" srcset="images/activites/4_small/fort-de-pomegues.jpg">
+                                <source media="(min-width: 481px) and (max-width: 980px)" srcset="images/activites/tablette/fort-de-pomegues-tablette.jpg">
+                                <source media="(min-width: 981px)" srcset="images/activites/4_small/fort-de-pomegues.jpg">
                                 <img src="images/activites/4_small/fort-de-pomegues.jpg" alt="Image du Fort de Pomègues">
                             </picture>
                             <h4>Fort de Pomègues</h4>
@@ -244,7 +246,8 @@
                         <div class="activities-box">
                             <picture>
                                 <source media="(max-width: 480px)" srcset="images/activites/4_small_mobile/ile-du-frioul-mobile.jpg">
-                                <source media="(min-width: 481px)" srcset="images/activites/4_small/iles-du-frioul.jpg">
+                                <source media="(min-width: 481px) and (max-width: 980px)" srcset="images/activites/tablette/ile-du-frioul-tablette.jpg">
+                                <source media="(min-width: 981px)" srcset="images/activites/4_small/iles-du-frioul.jpg">
                                 <img src="images/activites/4_small/iles-du-frioul.jpg" alt="Image des Îles du Frioul">
                             </picture>
                             <h4>Îles du Frioul</h4>
@@ -255,7 +258,8 @@
                     <div class="activities-box">
                         <picture>
                             <source media="(max-width: 480px)" srcset="images/activites/4_small_mobile/parc-national-des-calanques-mobile.jpg">
-                            <source media="(min-width: 481px)" srcset="images/activites/4_small/parc-national-des-calanques.jpg">
+                            <source media="(min-width: 481px) and (max-width: 980px)" srcset="images/activites/tablette/parc-national-des-calanques-tablette.jpg">
+                            <source media="(min-width: 981px)" srcset="images/activites/4_small/parc-national-des-calanques.jpg">
                             <img src="images/activites/4_small/parc-national-des-calanques.jpg" alt="Image du Parc National des Calanques">
                         </picture>
                         <h4>Parc National des Calanques</h4>
@@ -266,7 +270,8 @@
                         <div class="activities-box">
                             <picture>
                                 <source media="(max-width: 480px)" srcset="images/activites/4_small_mobile/notre-dame-de-la-garde-mobile.jpg">
-                                <source media="(min-width: 481px)" srcset="images/activites/4_small/notre-dame-de-la-garde.jpg">
+                                <source media="(min-width: 481px) and (max-width: 980px)" srcset="images/activites/tablette/notre-dame-de-la-garde-tablette.jpg">
+                                <source media="(min-width: 981px)" srcset="images/activites/4_small/notre-dame-de-la-garde.jpg">
                                 <img src="images/activites/4_small/notre-dame-de-la-garde.jpg" alt="Image de Notre-Dame-de-la-Garde">
                             </picture>
                             <h4>Notre-Dame-de-la-Garde</h4>
@@ -276,7 +281,8 @@
                         <div class="activities-box">
                             <picture>
                                 <source media="(max-width: 480px)" srcset="images/activites/4_small_mobile/parc-longchamp-mobile.jpg">
-                                <source media="(min-width: 481px)" srcset="images/activites/4_small/parc-longchamp.jpg">
+                                <source media="(min-width: 481px) and (max-width: 980px)" srcset="images/activites/tablette/parc-longchamp-tablette.jpg">
+                                <source media="(min-width: 981px)" srcset="images/activites/4_small/parc-longchamp.jpg">
                                 <img src="images/activites/4_small/parc-longchamp.jpg" alt="Image du Parc Longchamp">
                             </picture>
                             <h4>Parc Longchamp</h4>
