--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <p>Plus de 500 logements sont disponibles dans cette ville</p>
             </div>
         </section>
-        <section class="results">
+        <div class="results">
             <article class="lodging-section">
                 <h2 id="lodging">Hébergements à Marseille</h2>
                 <div class="m-lodging">
@@ -215,7 +215,7 @@
                     </a>
                 </div>
             </article>
-        </section>
+        </div>
         <section>
             <h2 id="activities">Activités à Marseille</h2>
             <div class="activities-section">
