--- a/index.html
+++ b/index.html
@@ -179,9 +179,11 @@
                 <div class="m-popular">
                     <a href="#">
                         <div class="popular-box">
-                            <div class="popular-box-img">
-                                <img src="images/hebergements/4_small/hotel-le-soleil-du-matin.jpg" alt="chambre de l'hôtel le soleil du matin">
-                            </div>
+                                <picture>
+                                    <source media="(max-width: 400px)" srcset="images/hebergements/4_small_mobile/le-soleil-du-matin-mobile.jpg">
+                                    <source media="(min-width: 401px)" srcset="images/hebergements/4_small/hotel-le-soleil-du-matin.jpg">
+                                    <img src="images/hebergements/4_small/hotel-le-soleil-du-matin.jpg" alt="chambre de l'hôtel le soleil du matin">
+                                </picture>
                             <div class="popular-box-info">
                                 <h4>Hôtel Le soleil du matin</h4>
                                 <p>Nuit à partir de <span>128€</span></p>
@@ -191,9 +193,11 @@
                     </a>
                     <a href="#">
                         <div class="popular-box">
-                            <div class="popular-box-img">
-                                <img src="images/hebergements/4_small/au-coeur-de-l-eau.jpg" alt="chambre des chambres d'hôtes Au coeur de l'eau">
-                            </div>
+                                <picture>
+                                    <source media="(max-width: 400px)" srcset="images/hebergements/4_small_mobile/au-coeur-de-leau-mobile.jpg">
+                                    <source media="(min-width: 401px)" srcset="images/hebergements/4_small/au-coeur-de-l-eau.jpg">
+                                    <img src="images/hebergements/4_small/au-coeur-de-l-eau.jpg" alt="chambre des chambres d'hôtes Au coeur de l'eau">
+                                </picture>
                             <div class="popular-box-info">
                                 <h4>Au coeur de l'eau Chambres d'hôtes</h4>
                                 <p>Nuit à partir de <span>71€</span></p>
@@ -203,9 +207,11 @@
                     </a>
                     <a href="#">
                         <div class="popular-box">
-                            <div class="popular-box-img">
-                                <img src="images/hebergements/4_small/hotel-tout-bleu-et-blanc.jpg" alt="chambre de l'hôtel Tout bleu et blanc">
-                            </div>
+                                <picture>
+                                    <source media="(max-width: 400px)" srcset="images/hebergements/4_small_mobile/tout-bleu-et-blanc-mobile.jpg">
+                                    <source media="(min-width: 401px)" srcset="images/hebergements/4_small/hotel-tout-bleu-et-blanc.jpg">
+                                    <img src="images/hebergements/4_small/hotel-tout-bleu-et-blanc.jpg" alt="chambre de l'hôtel Tout bleu et blanc">
+                                </picture>
                             <div class="popular-box-info">
                                 <h4>Hôtel Tout bleu et blanc</h4>
                                 <p>Nuit à partir de <span>68€</span></p>
